--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.1.0",
     "@xstate/react": "^6.0.0",
+    "antd": "^6.2.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "xstate": "^5.25.1"
